created navbar + section 1 without styles

--- a/index.html
+++ b/index.html
@@ -14,14 +14,111 @@
     </head>
 
     <body>
-        <nav role="navigation" class="mobile-nav container">
-            <div>
-                <img src="/media/logos/logo-slack-salesforce-black.png" alt="Logo de Slack + Salesforce">
+        <nav>
+            <div  role="navigation" class="mobile-tablet-nav-container">
+                <div>
+                    <img src="/media/logos/logo-slack-salesforce-black.png" alt="Logo de Slack + Salesforce">
+                </div>
+    
+                <div>
+                    <img src="/media/icons/menu-hamburguesa.svg" alt="Icono de menú de hamburguesa">    
             </div>
-
+            <div class="desktop-nav-container">
+                <div class="Slack-first-logo">
+                    <img src="/media/logos/logo-slack-salesforce-black.png" alt="Logo de Slack + Salesforce">
+                </div>
+                <div class="element-list">
+                    <div class="container-list">
+                        <div class="text-list">
+                            <h2>Funciones</h2>
+                        </div>
+                        <div class="icon-list">
+                            <img src="./media/icons/flecha-negra-abajo.svg" alt="black arrow looking down">
+                        </div>
+                    </div>
+                    <div class="container-list">
+                        <div class="text-list">
+                            <h2>Soluciones</h2>
+                        </div>
+                        <div class="icon-list">
+                            <img src="./media/icons/flecha-negra-abajo.svg" alt="black arrow looking down">
+                        </div>
+                    </div>
+                    <div class="container-list">
+                        <div class="text-list">
+                            <h2>Empresa</h2>
+                        </div>
+                    </div>
+                    <div class="container-list">
+                        <div class="text-list">
+                            <h2>Recursos</h2>
+                        </div>
+                        <div class="icon-list">
+                            <img src="./media/icons/flecha-negra-abajo.svg" alt="black arrow looking down">
+                        </div>
+                    </div>
+                    <div class="container-list">
+                        <div class="text-list">
+                            <h2>Precio</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div>
-                <img src="/media/icons/menu-hamburguesa.svg" alt="Icono de menú de hamburguesa">
+                <div>
+                    <div class="container-list">
+                        <div class="text-list">
+                            <h3>Conectarse</h3>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="talk-sales">
+                            <button>HABLAR CON VENTAS</button>
+                        </div>
+                        <div class="first-steeps">
+                            <button>PRIMEROS PASOS</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </nav>
+        <section class="heading">
+            <div class="heading-container">
+                <div class="heading-title">
+                    <h1>Pensado para las personas. Creado para la productividad</h1>
+                </div>
+                <div>
+                    <div class="first-steeps">
+                        <button>PRIMEROS PASOS</button>
+                    </div>
+                </div>
+                <div class="heading-subtitle">
+                    <h3><strong>Slack puede probarse de forma gratuita </strong>durante el tiempo que se quiera</h3>
+                </div>
+                <div class="partners-icons">
+                    <div class="airbnb-icon">
+                        <img src="/media/logos/logo-airbnb.png" alt="logo airbnb">
+                    </div>
+                    <div class="nasa-icon">
+                        <img src="/media/logos/logo-nasa.png" alt="logo nasa">
+                    </div>
+                    <div class="uber-icon">
+                        <img src="/media/logos/logo-uber.png" alt="logo uber">
+                    </div>
+                    <div class="target-icon">
+                        <img src="/media/logos/logo-target.png" alt="logo red target">
+                    </div>
+                    <div class="new-york">
+                        <img src="/media/logos/logo-nyt.png" alt="logo new york times">
+                    </div>
+                    <div class="etsy">
+                        <img src="/media/logos/logo-etsy.png" alt="logo etsy">
+                    </div>
+                </div>
+                <div class="video-presentation">
+                    <video src="/media/videos/hero.webm" preload="auto"></video>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
