tweaks in styles

--- a/index.html
+++ b/index.html
@@ -89,9 +89,10 @@
 			<div class="desktop-nav-buttons">
 				<p>Conectarse</p>
 				<button class="show-on-desktop-xxl btn-primary">
-					Hablar con ventas
+					HABLAR CON VENTAS
 				</button>
-				<button class="btn-secundary">Primeros pasos</button>
+				<button class="btn-secundary">
+					PRIMEROS PASOS</button>
 			</div>
 		</nav>
 		<!-- header -->
@@ -100,7 +101,7 @@
 				Pensado para las personas.
 				<span>Creado para la productividad</span>
 			</h1>
-			<button class="btn-secundary">Primeros pasos</button>
+			<button class="btn-secundary">PRIMEROS PASOS</button>
 			<p>
 				<strong>Slack puede probarse de manera grautita</strong>
 				durante el tiempo que se quiera
@@ -217,9 +218,9 @@
 					empresas mas importantes del mundo.
 				</p>
 				<div class="stadistics-btn-container container">
-					<button class="btn-secundary">Conoce Slack para empresas</button>
+					<button class="btn-secundary">CONOCE SLACK PARA EMPRESAS</button>
 
-					<button class="btn-primary">Hablar con ventas</button>
+					<button class="btn-primary">HABLAR CON VENTAS</button>
 				</div>
 				<div class="stadistic-data container">
 					<!-- NO SE DONDE AÑADIR ESTOS ESTILOS PARA QUE SE ALINEEN EN VERSION MOVIL
@@ -570,9 +571,9 @@
 						</li>
 					</ul>
 				</div>
-				<div class="copyright">
-					©2024 Slack Technologies, LLC, una empresa de Salesforce. Todos los derechos reservados. Las distintas marcas comerciales pertenecen a sus respectivos propietarios.
-				</div>
+			</div>
+			<div class="copyright">
+				©2024 Slack Technologies, LLC, una empresa de Salesforce. Todos los derechos reservados. Las distintas marcas comerciales pertenecen a sus respectivos propietarios.
 			</div>
 		</footer>
 	</body>
