--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
 							flex-direction: column;
 							align-items: center;" 
 					-->
+					<!-- SOLUCION FIJATE EN LAS TERMINACIONES DE LAS CLASES era una S de mas en stadistics en vez de STADISTIC -->
 					<div class="stadistic-data-element">
 						<h2>85%</h2>
 						<p class="stadistic-description">
