--- a/index.html
+++ b/index.html
@@ -223,13 +223,6 @@
 					<button class="btn-primary">HABLAR CON VENTAS</button>
 				</div>
 				<div class="stadistic-data container">
-					<!-- NO SE DONDE AÑADIR ESTOS ESTILOS PARA QUE SE ALINEEN EN VERSION MOVIL
-						style="
-							display: flex;
-							flex-direction: column;
-							align-items: center;" 
-					-->
-					<!-- SOLUCION FIJATE EN LAS TERMINACIONES DE LAS CLASES era una S de mas en stadistics en vez de STADISTIC -->
 					<div class="stadistic-data-element">
 						<h2>85%</h2>
 						<p class="stadistic-description">
@@ -283,7 +276,7 @@
 			<div class="news-container container">
 				<article class="news-cards">
 					<div class="article-image-container">
-						<img src="/media/images/img-promo-01.jpg" alt="imagen promo 1">
+						<img src="/media/images/img-promo-01.jpg" alt="imagen slack en relieve">
 					</div>
 					<div class="article-description">
 						<div class="article-title">
@@ -300,7 +293,7 @@
 
 				<article class="news-cards">
 					<div class="article-image-container">
-						<img src="/media/images/img-promo-02.jpg" alt="imagen promo 2">
+						<img src="/media/images/img-promo-02.jpg" alt="imagen tarta de cumpleaños">
 					</div>
 					<div class="article-description">
 						<div class="article-title">
@@ -317,7 +310,7 @@
 
 				<article class="news-cards">
 					<div class="article-image-container">
-						<img src="/media/images/img-promo-03.jpg" alt="imagen promo 3">
+						<img src="/media/images/img-promo-03.jpg" alt="altavoz rosa">
 					</div>
 					<div class="article-description">
 						<div class="article-title">
@@ -333,7 +326,7 @@
 
 				<article class="news-cards">
 					<div class="article-image-container">
-						<img src="/media/images/img-promo-04.jpg" alt="imagen promo 4">
+						<img src="/media/images/img-promo-04.jpg" alt="cohete azul despegando">
 					</div>
 					<div class="article-description container">
 						<div class="article-title">
@@ -360,14 +353,14 @@
 			<div class="stadistics-btn-container container">
 				<button class="btn-secundary">PRIMEROS PASOS</button>
 
-				<button class="btn-thirdary">HABLAR CON VENTAS</button>
+				<button class="btn-secundary btn-secundary-inverted">HABLAR CON VENTAS</button>
 			</div>
 		</section>
 		<!-- languages y RRSS -->
 		<section class="languages container">
 			<div class="language">
 				<button class="select-language-button">
-					<img src="/media/icons/icon-mundo.svg" alt="world icon">
+					<img src="/media/icons/icon-world.svg" alt="world icon">
 					<strong>Cambiar region</strong>
 					<img src="/media/icons/flecha-negra-abajo.svg" alt="">
 				</button>
